--- a/Web/src/app/components/util/left-menu/menu-item/menu-item.component.css
+++ b/Web/src/app/components/util/left-menu/menu-item/menu-item.component.css
@@ -48,3 +48,7 @@
 fa-icon {
     width: 16px;
 }
+
+.menu-item.larger {
+    height: 84px;
+}
